[package]
name = "rusty-hud-demo"
version = "0.1.0"
authors = ["willnilges <wdn5796@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rustyhud = { git = "https://github.com/willnilges/rustyhud.git", branch = "crating"}
rustyhud = { path = "/home/wilnil/Documents/Code/RustyHUD"}
ncurses = "5.99.0"
